--- a/404.html
+++ b/404.html
@@ -139,7 +139,7 @@
   <div class="container flex flex-wrap">
     <div class="gblog-header__col-1 flex justify-start hidden-mobile"></div>
     <div class="gblog-header__col-2 flex align-center justify-center ">
-      <a class="gblog-header__link" rel="me" href="http://n4sm.github.io">
+      <a class="gblog-header__link" rel="me" href="https://n4sm.github.io">
         <span class="gblog-brand flex align-center justify-center">
           <img
             class="gblog-brand__img"
@@ -257,7 +257,7 @@
             <div class="gblog-error__line gblog-error__code">Error 404</div>
             <div class="gblog-error__line gblog-error__help">
               Seems like what you are looking for can't be found. Don't worry we can bring you back
-              to the <a class="gblog-error__link" href="http://n4sm.github.io">homepage</a>.
+              to the <a class="gblog-error__link" href="https://n4sm.github.io">homepage</a>.
             </div>
           </div>
         </div>
