--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
   "
 />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://n4sm.github.io/" />
-      <meta property="og:image" content="http://n4sm.github.io/risa.png" />
+<meta property="og:url" content="https://n4sm.github.io/" />
+      <meta property="og:image" content="https://n4sm.github.io/risa.png" />
     
 
 <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:image" content="http://n4sm.github.io/risa.png" />
+      <meta name="twitter:image" content="https://n4sm.github.io/risa.png" />
     
 <meta name="twitter:title" content="repr" />
 <meta
@@ -157,7 +157,7 @@
 />
 
 
-  <link rel="alternate" type="application/atom+xml" href="http://n4sm.github.io/feed.xml" title="repr">
+  <link rel="alternate" type="application/atom+xml" href="https://n4sm.github.io/feed.xml" title="repr">
 
 
 
@@ -170,9 +170,9 @@
     "@type": "WebSite",
     "author": "nasm",
     "name": "repr",
-    "url": "http:\/\/n4sm.github.io",
+    "url": "https:\/\/n4sm.github.io",
     "description": "pwn, RE, crypto stuff",
-    "thumbnailUrl": "http:\/\/n4sm.github.io\/risa.png",
+    "thumbnailUrl": "https:\/\/n4sm.github.io\/risa.png",
     "license": "Beerware license"
 }
 </script>
@@ -197,7 +197,7 @@
   <div class="container flex flex-wrap">
     <div class="gblog-header__col-1 flex justify-start hidden-mobile"></div>
     <div class="gblog-header__col-2 flex align-center justify-center ">
-      <a class="gblog-header__link" rel="me" href="http://n4sm.github.io">
+      <a class="gblog-header__link" rel="me" href="https://n4sm.github.io">
         <span class="gblog-brand flex align-center justify-center">
           <img
             class="gblog-brand__img"
