--- a/index.html
+++ b/index.html
@@ -322,9 +322,8 @@
       </header>
 
       <section class="gblog-markdown">
-        Here are just some side notes about linux kernel internals I put here to avoid to have to learn same things again and again. Every notes target linux kernel 5.18.12.
+        Here are just some side notes about linux kernel internals I put here to avoid to have to learn same things again and again. Every notes target linux kernel 5.18.12. There will be a lot of code for which I do not comment the whole part.
 Kernel heap management (SLUB, SLAB, SLOB)     Same way as for userland, the kernel has many algorithms to manage memory allocation according to what the kernel is looking for (huge resources or not, safety needs etc).
-SLUB     The SLUB algorithm is the algorithm I know the more, so that&rsquo;s the one I will cover first.
       </section>
       <div class="gblog-post__readmore">
         
@@ -353,7 +352,7 @@ SLUB     The SLUB algorithm is the algorithm I know the more, so that&rsquo;s th
 
 <span class="flex align-center no-wrap">
   <svg class="icon gblog_timer"><use xlink:href="#gblog_timer"></use></svg>
-  <span class="gblog-post__tag">6 min read</span>
+  <span class="gblog-post__tag">5 min read</span>
 </span>
 
 
