--- a/404.html
+++ b/404.html
@@ -143,7 +143,7 @@
         <span class="gblog-brand flex align-center justify-center">
           <img
             class="gblog-brand__img"
-            src="/maths.png"
+            src="/risa.png"
             alt=""
           />
           <span class="gblog-brand__title">repr</span>
