--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ TL; DR      Understanding zig GeneralPurposeAllocator internals Hiijack the Buck
 
       <section class="gblog-markdown">
         Introduction     cshell2 is a heap challenge I did during the corCTF 2022event. It was pretty classic so I will not describe a lot. If you begin with heap challenges, I advice you to read previous heap writeup.
-TL; DR      Fill tcache. Heap overflow in edit on the bio field which allows to leak the address of the unsortedbin. Leak heap and defeat safe-linking to get an arbitrary write through tcache poisoning.
+TL; DR      Fill the tcache. Heap overflow in edit on the bio field which allows to leak the address of the unsortedbin. Leak heap and defeat safe-linking to get an arbitrary write through tcache poisoning.
       </section>
       <div class="gblog-post__readmore">
         
@@ -748,7 +748,7 @@ TL; DR      Fill tcache. Heap overflow in edit on the bio field which allows to 
 
 <span class="flex align-center no-wrap">
   <svg class="icon gblog_timer"><use xlink:href="#gblog_timer"></use></svg>
-  <span class="gblog-post__tag">17 min read</span>
+  <span class="gblog-post__tag">19 min read</span>
 </span>
 
 
