--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
       <section class="gblog-markdown">
         Introduction     File streams are now a very common attack surface, here is a high level introduction that should make you understand the design of known attacks beyond the code reading for a particular function. I already talked about FSOP here. This article reviews glibc 2.36. Most of this article comes from thisawesome series of articles about the _IO_FILE strcuture.
-Global design     As said in my previous writeup:
+ Introduction Global design Common functions fopen fread  _IO_file_xsgetn_mmap      Global design     As said in my previous writeup:
       </section>
       <div class="gblog-post__readmore">
         
@@ -352,7 +352,7 @@ Global design     As said in my previous writeup:
 
 <span class="flex align-center no-wrap">
   <svg class="icon gblog_timer"><use xlink:href="#gblog_timer"></use></svg>
-  <span class="gblog-post__tag">10 min read</span>
+  <span class="gblog-post__tag">18 min read</span>
 </span>
 
 
@@ -701,7 +701,7 @@ TL; DR      Understanding zig GeneralPurposeAllocator internals Hiijack the Buck
 
       <section class="gblog-markdown">
         Introduction     cshell2 is a heap challenge I did during the corCTF 2022event. It was pretty classic so I will not describe a lot. If you begin with heap challenges, I advice you to read previous heap writeup.
-TL; DR      Fill the tcache. Heap overflow in edit on the bio field which allows to leak the address of the unsortedbin. Leak heap and defeat safe-linking to get an arbitrary write through tcache poisoning.
+TL; DR      Fill tcache. Heap overflow in edit on the bio field which allows to leak the address of the unsortedbin. Leak heap and defeat safe-linking to get an arbitrary write through tcache poisoning.
       </section>
       <div class="gblog-post__readmore">
         
@@ -919,7 +919,7 @@ TL; DR      Fill the tcache. Heap overflow in edit on the bio field which allows
 
 <span class="flex align-center no-wrap">
   <svg class="icon gblog_timer"><use xlink:href="#gblog_timer"></use></svg>
-  <span class="gblog-post__tag">19 min read</span>
+  <span class="gblog-post__tag">18 min read</span>
 </span>
 
 
